--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+language: node_js
+node_js:
+  - 10
 sudo: required
 services:
   - docker
@@ -6,4 +9,5 @@ before_install:
   - docker build -t bob/frontend-react-docker-example -f Dockerfile.dev .
 
 script:
-  - docker run bob/frontend-react-docker-example npm run test -- --coverage
+  - docker run bob/frontend-react-docker-example npm test
+
