--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
   - docker build -t bob/frontend-react-docker-example -f Dockerfile.dev .
 
 script:
-  - docker run bob/frontend-react-docker-example npm test
+  - docker run -e CI=true bob/frontend-react-docker-example npm test -- --coverage
 
